--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
+        "league/flysystem": "^1.0",
         "league/flysystem-aws-s3-v3": "^1.0",
         "spatie/laravel-permission": "^2.37",
         "tymon/jwt-auth": "^1.0"
