--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "vue": "2.6.10",
     "vue-count-to": "^1.0.13",
     "vue-i18n": "^8.12.0",
+    "vue-moment": "^4.0.0",
     "vue-router": "^3.1.2",
     "vue-splitpane": "^1.0.4",
     "vuedraggable": "^2.23.0",
