--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "vue-router": "^3.1.2",
     "vue-splitpane": "^1.0.4",
     "vuedraggable": "^2.23.0",
+    "vuejs-datepicker": "^1.6.2",
     "vuex": "3.1.0",
     "xlsx": "^0.14.5"
   }
