--- a/package.json
+++ b/package.json
@@ -28,57 +28,58 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "babel-eslint": "^10.0.2",
+    "@babel/plugin-syntax-dynamic-import": "^7.7.4",
+    "babel-eslint": "^10.0.3",
     "babel-plugin-dynamic-import-node": "^2.3.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
-    "compression-webpack-plugin": "^2.0.0",
-    "cross-env": "^5.1",
+    "compression-webpack-plugin": "^3.0.1",
+    "cross-env": "^5.2.1",
     "eslint": "^5.16.0",
     "eslint-loader": "^2.2.1",
     "eslint-plugin-vue": "^5.2.3",
-    "husky": "^3.0.3",
-    "laravel-mix": "^4.1.2",
+    "husky": "^3.1.0",
+    "laravel-mix": "^4.1.4",
     "laravel-mix-eslint": "^0.1.3",
-    "lint-staged": "^9.2.1",
+    "lint-staged": "^9.5.0",
     "resolve-url-loader": "^2.3.1",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "^7.3.1",
     "script-loader": "^0.7.2",
     "svg-sprite-loader": "^4.1.3",
     "vue-template-compiler": "2.6.10",
-    "webpack": "^4.39.1",
-    "webpack-bundle-analyzer": "^3.4.1"
+    "webpack": "^4.41.2",
+    "webpack-bundle-analyzer": "^3.6.0"
   },
   "dependencies": {
     "axios": "^0.18.1",
     "camelcase": "^5.3.1",
     "clipboard": "^2.0.4",
-    "core-js": "^3.1.4",
-    "driver.js": "^0.9.7",
+    "core-js": "^3.4.8",
+    "driver.js": "^0.9.8",
     "dropzone": "^5.5.1",
-    "echarts": "^4.1.0",
-    "element-ui": "^2.11.1",
+    "echarts": "^4.5.0",
+    "element-ui": "^2.13.0",
+    "eslint-auto-fix": "^1.0.0",
     "file-saver": "^2.0.1",
-    "fuse.js": "^3.4.5",
+    "fuse.js": "^3.4.6",
     "js-cookie": "^2.2.1",
     "jsonlint": "^1.6.3",
     "jszip": "^3.2.2",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.0",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
-    "path-to-regexp": "^3.0.0",
+    "path-to-regexp": "^3.2.0",
     "screenfull": "^4.2.1",
-    "sortablejs": "^1.8.4",
-    "tui-editor": "^1.4.5",
+    "sortablejs": "^1.10.1",
+    "tui-editor": "^1.4.9",
     "vue": "2.6.10",
     "vue-count-to": "^1.0.13",
-    "vue-i18n": "^8.12.0",
+    "vue-i18n": "^8.15.1",
     "vue-moment": "^4.0.0",
-    "vue-router": "^3.1.2",
-    "vue-splitpane": "^1.0.4",
-    "vuedraggable": "^2.23.0",
+    "vue-router": "^3.1.3",
+    "vue-splitpane": "^1.0.6",
+    "vuedraggable": "^2.23.2",
     "vuejs-datepicker": "^1.6.2",
     "vuex": "3.1.0",
     "xlsx": "^0.14.5"
